# sbs-cli

./: Cargo.toml  README.md  package.json  pre-install.js  start.js  uninstall.js
src/: main.rs  prompt_manager.rs
src/console_output/: ascii_art.rs
src/data_readers/: args_reader.rs  master_list_reader.rs
src/data_reading/: args_reader.rs  master_list_reader.rs
src/file_system/: git_cloner.rs
src/file_system_crud/: git_cloner.rs
src/inquire_prompts/: clone_overwrite_confirm.rs  current_dir_confirm.rs  folder_name_prompt.rs  starter_select_prompt.rs
src/pure_functions/: repo_name_extracter.rs  starter_finder.rs  validate_cli_args.rs
