[package]
name = "bss-cli-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["blocking",] }
serde_yaml = "0.9.21"
git2 = "0.16.1"
inquire = "0.6.0"
termimad = "0.23.0"

[dev-dependencies]
assert_cmd = "2.0.10"
