[package]
name = "bss"
version = "0.1.0"
edition = "2021"
description = "The Blockchain Super Scaffolder command line tool"
repository = "https://github.com/Blockchain-Super-Scaffolder/bss-cli-tool"
readme = "README.md"
keywords = ["blockchain", "crypto", "npm", "rust", "cli-tool", "scaffold", "sdcaffolder", "scaffolding", "template"]
categories = ["command-line-utilities"]
license = "MIT"
homepage = "https://github.com/Blockchain-Super-Scaffolder/bss-cli-tool"
authors = ["BSS Team - jim.lynch@evaluates2.com"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["blocking",] }
serde_yaml = "0.9.21"
git2 = "0.16.1"
inquire = "0.6.0"
termimad = "0.23.0"

[dev-dependencies]
assert_cmd = "2.0.10"
