[package]
name = "sbs"
version = "0.0.3"
edition = "2021"
description = "The Super Blockchain Scaffolder, a command line utility for scaffolding blockchain-related projects!"
repository = "https://github.com/Super-Blockchain-Scaffolder/sbs-cli"
readme = "README.md"
keywords = ["blockchain", "crypto", "npm", "cli-tool", "scaffold"]
categories = ["command-line-utilities", "crypto", "blockchain", "rust"]
license = "MIT"
homepage = "https://sbs-cli.org"
authors = ["SBS Team - jim.lynch@evaluates2.com"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["blocking",] }
serde_yaml = "0.9.21"
git2 = "0.16.1"
inquire = "0.6.0"
termimad = "0.23.0"

[dev-dependencies]
assert_cmd = "2.0.10"
